<resources>
    <string name="app_name">班圈</string>
    <string name="message">消息</string>
    <string name="contact">联系人</string>
    <string name="me">我的</string>
    <string name="translate_title">translate_title</string>
    <string name="content_description_default">图片描述</string>
    <string name="id">学号</string>
    <string name="id_number">身份证编号</string>
    <string name="code_image">验证码</string>
    <string name="login">登录</string>
    <string name="login_terms">登录即代表阅读并同意服务条款</string>
    <string name="service_terms">服务条款</string>
    <string name="limit_group_desc">群描述(不超过40个字符)</string>
    <string name="limit_group_name">请输入群名(不超过10个字符)</string>
    <string name="create_terms">我已阅读并同意</string>
    <string name="determine">确定</string>
    <string name="translate_head">translate_head</string>
    <string name="name">姓名</string>
    <string name="sign">一句话描述</string>
    <string name="address">居住地</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="modify_skin">换肤</string>
    <string name="modify_theme_color">更换主题色彩</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_all_cache">清除图片缓存，数据缓存等</string>
    <string name="define_cache_size">0MB</string>
    <string name="exit">退出</string>
    <string name="voice_notify">声音提示</string>
    <string name="shake_notify">震动提示</string>
    <string name="check_update">检测更新</string>
    <string name="about_us">关于我们</string>
</resources>
