<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".feature.me.setting.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/setting_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/white"
                app:layout_collapseMode="pin"
                tools:targetApi="m" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/setting_changeskin"
                style="@style/SettingLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_skin"/>

                <TextView
                    style="@style/SettingDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_theme_color"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_clear"
                style="@style/SettingLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SettingName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_cache"/>

                    <TextView
                        style="@style/SettingDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_all_cache"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/setting_clearsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/define_cache_size"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_voice"
                style="@style/SettingLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_notify"
                    android:textColor="#222"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_shake"
                style="@style/SettingLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shake_notify"
                    android:textColor="#222"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_updata"
                style="@style/SettingLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_update"
                    android:textColor="#222"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_aboutus"
                style="@style/SettingLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textColor="#222"
                    android:textSize="16sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/setting_exitlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/SettingLine"
                android:text="@string/exit"
                android:textColor="#FF4081"
                android:textSize="18sp"/>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <!--    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_comment"
            app:layout_anchonumbnumbcontactcontactId"@id/appBar"
            app:layout_anchorGravity="bottom|end" />-->
</android.support.design.widget.CoordinatorLayout>