<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.wyf.classchat.weight.PreloadViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ccc" />

    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_message"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/content_description_default"
                android:background="@drawable/ic_main_message" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="@drawable/sel_color_main_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_contact"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/content_description_default"
                android:background="@drawable/ic_main_contact" />

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@drawable/sel_color_main_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/content_description_default"
                android:background="@drawable/ic_main_me" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textColor="@drawable/sel_color_main_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>